Fix compile on 32bit

BUG: 394330